--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url:                 https://han-gyeol.github.io
 baseurl:             ''
 paginate:            5
 disqusid:            hangyeoloh
-tage_page:           /tags
+tag_page:           /tags
 category_page:       /categories
 
 
